package de.ruu.lib.fx.comp;

/**
 * Empty base type for the interface a <code>FXComp</code> component provides.
 *
 * @author ruu
 */
public interface FXCViewService { }